<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.profile.ui.main.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/fab_margin"
        android:paddingBottom="@dimen/fab_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/imageView"
                    android:layout_width="126dp"
                    android:layout_height="126dp"
                    app:srcCompat="@drawable/github_logo"
                    android:contentDescription="@string/glogo"
                    android:layout_margin="3dp"
                    android:scaleType="centerCrop"
                    app:civ_border_width="1dp"
                    android:layout_gravity="center_horizontal"
                    app:civ_border_color="@android:color/transparent"
                    />

                <TextView
                    android:id="@+id/guserTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/guser"
                    android:textSize="24sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="5dp"
                    app:contentPadding="@dimen/fab_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/gpbrepo"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/pbrTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="start"
                            android:text="@string/cnt"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="5dp"
                    app:contentPadding="@dimen/fab_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/gpbgist"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/pbgTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="start"
                            android:text="@string/cnt"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="5dp"
                    app:contentPadding="@dimen/fab_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/frcnt"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/frTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="start"
                            android:text="@string/cnt"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="5dp"
                    app:contentPadding="@dimen/fab_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/fgcnt"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/fgTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="start"
                            android:text="@string/cnt"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="5dp"
                    app:contentPadding="@dimen/fab_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/gurl"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/gpBut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="#4CAF50"
                            android:padding="5dp"
                            android:textColor="#FAF8F8"
                            android:textSize="18sp"
                            android:text="@string/loading"
                            />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>